--- a/static/onelip/index.html
+++ b/static/onelip/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Immediately redirect after 0 seconds -->
-    <meta http-equiv="refresh" content="0; url=https://arxiv.org/pdf/2505.12003">
+    <meta http-equiv="refresh" content="0; url=https://arxiv.org/abs/2505.12003">
     <title>Redirecting...</title>
 </head>
 <body>
     <!-- In case redirection does not work automatically -->
     <p>If you are not redirected automatically, please visit
-       <a href="https://arxiv.org/pdf/2505.12003">this page</a>.
+       <a href="https://arxiv.org/abs/2505.12003">this page</a>.
     </p>
 </body>
 </html>
